--- a/Makefile.in
+++ b/Makefile.in
@@ -40,6 +40,7 @@ WWW=http://ecls.sourceforge.net/
 #  Where to find the source code.
 #  This is set by the configure script's `--srcdir' option.
 srcdir=@srcdir@
+buildir=@buildir@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
@@ -65,21 +66,21 @@ INSTALL_DATA = @INSTALL_DATA@
 
 # ============================= Build ==============================
 
-all: build/Makefile
-	cd build; $(MAKE)
+all: $(buildir)/Makefile
+	cd $(buildir); $(MAKE)
 .PHONY:	all
 
-Makefile: Makefile.in build/config.status
-	(cd build; ./config.status)
+Makefile: Makefile.in $(buildir)/config.status
+	(cd $(buildir); ./config.status)
 
 # ==================== Installation ====================
 
 INSTALL_TARGET = @INSTALL_TARGET@
 
-install: build/Makefile
-	cd build; $(MAKE) $(INSTALL_TARGET)
+install: $(buildir)/Makefile
+	cd $(buildir); $(MAKE) $(INSTALL_TARGET)
 uninstall:
-	cd build; $(MAKE) uninstall
+	cd $(buildir); $(MAKE) uninstall
 
 # ==================== Documentation ====================
 
@@ -98,7 +99,7 @@ dvi:
 #        with them.
 #
 clean:
-	cd build; $(MAKE) clean
+	cd $(buildir); $(MAKE) clean
 
 #   `distclean'
 #        Delete all files from the current directory that are created by
@@ -108,7 +109,7 @@ clean:
 #        distribution.
 
 distclean: clean
-	rm -fr build/config.status
+	rm -fr $(buildir)/config.status
 	rm -f Makefile
 
 #   `realclean'
@@ -126,15 +127,15 @@ TAGS tags:
 	 etags c/*.[cd] h/*.h)
 
 check test:
-	cd build; $(MAKE) test
+	cd $(buildir); $(MAKE) test
 
 TAR_DIR=ecl-$(VERSION)
 
-doc: build/doc/index.html
+doc: $(buildir)/doc/index.html
 	-mkdir doc
-	(cd build/doc; make html); cp build/doc/*.html doc
-build/doc/index.html:
-	cd build/doc; $(MAKE)
+	(cd $(buildir)/doc; make html); cp $(buildir)/doc/*.html doc
+$(buildir)/doc/index.html:
+	cd $(buildir)/doc; $(MAKE)
 
 source-dist: $(TAR_DIR).tgz $(TAR_DIR)-tests.tgz
 
@@ -171,20 +172,20 @@ binary-dist: all
 	for i in tmp$(bindir) tmp$(infodir) tmp$(mandir) tmp$(libdir); do \
 	(echo $$i; IFS="/"; \for k in $$i; do echo $$k; (test -d $$k || mkdir $$k); chmod 755 $$k; cd $$k; done); \
 	done
-	prefix=`pwd`/tmp; cd build; $(MAKE) install prefix=$(prefix)
+	prefix=`pwd`/tmp; cd $(buildir); $(MAKE) install prefix=$(prefix)
 	su -c "chown -R root.root tmp && cd tmp; tar czf ../ecl-$(VERSION)-$(MACHINE).tgz * && cd .. && rm -rf tmp"
 
 # This creates a ZIP file with a flattened directory structure
 windows-dist: all
-	cd build; rm -rf $(TAR_DIR); mkdir $(TAR_DIR); \
+	cd $(buildir); rm -rf $(TAR_DIR); mkdir $(TAR_DIR); \
 	$(MAKE) flatinstall prefix=`pwd`/$(TAR_DIR); \
 	zip -r $(TAR_DIR).zip $(TAR_DIR)
 windows-nsi: all
-	cd build; rm -rf $(TAR_DIR); mkdir $(TAR_DIR); \
+	cd $(buildir); rm -rf $(TAR_DIR); mkdir $(TAR_DIR); \
 	$(MAKE) flatinstall prefix=`pwd`/$(TAR_DIR)
-	`pwd`/src/util/ecl_nsi.sh `pwd`/src/util/ecl.nsi build/$(TAR_DIR)
-	makensis.exe build/$(TAR_DIR)/ecl.nsi
-	mv build/$(TAR_DIR)/Setup.exe ecl-$(VERSION).exe
+	`pwd`/src/util/ecl_nsi.sh `pwd`/src/util/ecl.nsi $(buildir)/$(TAR_DIR)
+	makensis.exe $(buildir)/$(TAR_DIR)/ecl.nsi
+	mv $(buildir)/$(TAR_DIR)/Setup.exe ecl-$(VERSION).exe
 
 dist:
 	cd dist; make-dist
