Replaced the code walker with some hooks in the bytecodes compiler and use this for the analysis of method functions. The optimizations of SLOT-VALUE references are removed, since they are buggy.

--- a/src/clos/load.lsp.in
+++ b/src/clos/load.lsp.in
@@ -1,8 +1,7 @@
 ;;; @configure_input@
 
 (defconstant +clos-module-files+
-'("src:clos;walk.lsp"
-  "src:clos;macros.lsp"
+'("src:clos;macros.lsp"
   "src:clos;kernel.lsp"
   "src:clos;method.lsp"
   "src:clos;slot.lsp"
