--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -166,3 +166,6 @@ test:
 	$(MAKE) -C tests
 	$(MAKE) -C ansi-tests > ansi-tests/log
 	#-(diff tests ~/src/tests; diff --exclude log ansi-tests ~/src/ansi-tests) | less
+
+TAGS:
+	etags -R --langmap=c:+.d
