--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -41,7 +41,7 @@ OBJS	= main.o symbol.o package.o list.o\
 	instance.o gfun.o reference.o character.o\
 	file.o read.o print.o error.o string.o cfun.o\
 	typespec.o assignment.o \
-	predicate.o big.o number.o\
+	predicate.o number.o\
 	num_pred.o num_comp.o num_arith.o num_sfun.o num_co.o\
 	num_log.o num_rand.o array.o sequence.o cmpaux.o\
 	macros.o backq.o stacks.o \
