--- a/msvc/gmp/Makefile
+++ b/msvc/gmp/Makefile
@@ -566,7 +566,8 @@ mpn_p4.lib: msvc-build $(MPN_P4_OBJS)
 gmp.lib: mpn_$(MPN_TYPE).lib $(GMP_ALL_OBJS)
 	link -lib /NOLOGO /OUT:$@ *.obj mpf\*.obj mpz\*.obj mpq\*.obj $(PRINTF_OBJS) $(SCANF_OBJS) mpn_$(MPN_TYPE).lib
 
-CFLAGS = /nologo /MD /W3 /GX /I "." /I $(srcdir) /I "$(srcdir)\mpn\generic" /D "WIN32" /D "NDEBUG" /D "_LIB" /D "_WIN32" /D "_MBCS"
+MFLAGS = /MD
+CFLAGS = /nologo $(MFLAGS) /W3 /GX /I "." /I $(srcdir) /I "$(srcdir)\mpn\generic" /D "WIN32" /D "NDEBUG" /D "_LIB" /D "_WIN32" /D "_MBCS"
 
 {$(srcdir)\mpn\generic}.c{mpn\generic}.obj:
 	cl -c $(CFLAGS) /Fo$@ $?
