Disable MSVCRT.DLL debugging for the moment as it seems to conflict with the regular one.

--- a/msvc/Makefile
+++ b/msvc/Makefile
@@ -100,7 +100,7 @@ DEF           = ecl.def
 CFLAGS = -Zi $(CFLAGS)
 LDFLAGS = -Zi $(LDFLAGS)
 SHARED_LDFLAGS = -LDd
-MFLAGS = -MDd
+#MFLAGS = -MDd
 GCFLAGS =
 !endif
 
