--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -27,6 +27,7 @@
   "src:cmp;cmpvar.lsp"
   "src:cmp;cmpwt.lsp"
   "src:cmp;cmpffi.lsp"
+  "src:cmp;cmpcbk.lsp"
   "src:cmp;cmpct.lsp"
   "src:cmp;cmpnum.lsp"
   "build:cmp;cmpcfg.lsp"
