When using threads we have to define GC_THREADS so that the GC replaces the routines for creating threads. Change the initialization order in ecl_import_thread() to avoid referencing the environment before it is created.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -30,6 +30,9 @@
 
 /* Userland threads?							*/
 #undef ECL_THREADS
+#ifdef ECL_THREADS
+# define GC_THREADS
+#endif
 
 /* __thread thread-local variables?                                     */
 #undef WITH___THREAD
