--- a/src/configure.in
+++ b/src/configure.in
@@ -370,7 +370,7 @@ AC_CHECK_FUNCS( [floor getcwd gethostbyaddr gethostbyname getpagesize] \
 dnl !!! end autoscan
 
 AC_CHECK_FUNCS( [nanosleep alarm times isnanf select setenv putenv] \
-                [lstat mkstemp sigprocmask isatty feenableexcept] )
+                [lstat mkstemp sigprocmask isatty feenableexcept tzset] )
 
 dnl =====================================================================
 dnl Checks for system services
